--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <video src="3130376-uhd_3840_2160_24fps.mp4" loop autoplay muted>
+    <video src="video2.mp4" loop autoplay muted>
 
     </video>
     <div class="container">
@@ -39,5 +39,6 @@
     </div>
     <script src="script.js"> </script>
 </body>
+
 
 </html>
